no internet popup

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -99,7 +99,7 @@
                 <!--            <div class="item item-input area">-->
                 <div class="row">
                     <div class="col">
-                        <h5 class="member">Membership No.</h5>
+                        <h5 class="member">Shop Name</h5>
                     </div>
                     <div class="col membershipno">
                         <input type="text" id="normal-field" ng-model="product.membershipno">
