--- a/www/templates/myproducts.html
+++ b/www/templates/myproducts.html
@@ -13,8 +13,9 @@
                     <h3 class="leftname">Name: <span>{{pro.name}}</span></h3>
                     <h3 class="leftname">Price: <span>{{pro.price}}</span></h3>
                     <h3 class="leftname">Quantity: <span>{{pro.quantity}}</span></h3>
-                    <h3 class="leftname" ng-if="pro.status==1">Status: <span>Available</span></h3>
-                    <h3 class="leftname" ng-if="pro.status==0">Status: <span>Not Available</span></h3>
+                    <h3 class="leftname" ng-if="pro.status==1 && pro.moderated==1">Status: <span>Available</span></h3>
+                    <h3 class="leftname" ng-if="pro.status==0 && pro.moderated==1">Status: <span>Not Available</span></h3>
+                    <h3 class="leftname" ng-if="pro.moderated==0"><span style="color:red">Waiting for approval</span></h3>
                     <!--
                 <a class="item item-thumbnail-left bod-bottom" href="#">
                     <img src="img/icon.png">
@@ -34,7 +35,6 @@
                 <div class="text-center padding" >
                     <figure>
                         <img src="img/nop.jpg" class="full-image" style="width:110px;">
-
                     </figure>
                 </div>
             </div>
