--- a/www/templates/modal-mypurchase.html
+++ b/www/templates/modal-mypurchase.html
@@ -43,7 +43,13 @@
                 <ion-item class="item-left">
                     <h2>Quantity</h2>
                     <div class="pull-right item-right text-capitalize">
-						{{getp.quantity}}
+                        {{getp.quantity}}
+                    </div>
+                </ion-item>
+                <ion-item class="item-left">
+                    <h2>Status</h2>
+                    <div class="pull-right item-right text-capitalize">
+						{{getp.orderstatusname}}
                     </div>
                 </ion-item>
             </div>
