--- a/www/templates/checkout.html
+++ b/www/templates/checkout.html
@@ -45,10 +45,10 @@
 -->
 <!--                    <input class="text-right" type="text" placeholder="Quantity" ng-model="form.quantity" ng-class="allvalidation[8].validation" required>-->
                 </div>
-                <div class="item item-input text-capitalize">
+                <!-- <div class="item item-input text-capitalize">
                     <span class="input-label">Logistic Charge</span>
                     <input class="text-right" type="text" placeholder="Logistics Charges" ng-model="form.logisticcharge">
-                </div>
+                </div> -->
             </div>
         </form>
         <!--
