--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -5,7 +5,7 @@
             <button class="button button-icon ion-navicon no-hide" menu-toggle="left">
             </button>
         </div>
-        <h1 class="title">Home</h1>
+        <img src="img/main.png" class="main-png">
         <div class="buttons button-right">
             <button class="button button-icon ion-ios-loop-strong small-icon" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
         </div>
