--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
     <ion-side-menu-content>
-        <ion-nav-bar class="bar-balanced has-tabs-top">
+        <ion-nav-bar class="bar-balanced">
             <ion-nav-back-button>
             </ion-nav-back-button>
             <ion-nav-buttons side="left">
@@ -11,7 +11,7 @@
         <ion-nav-view name="menuContent"></ion-nav-view>
     </ion-side-menu-content>
     <ion-side-menu side="left" width=200>
-        <ion-header-bar class="bar-balanced has-tabs-top">
+        <ion-header-bar class="bar-balanced">
             <h3 class="title">Menu</h3>
         </ion-header-bar>
         <ion-content>
