--- a/www/templates/orders.html
+++ b/www/templates/orders.html
@@ -1,5 +1,5 @@
 <ion-view view-title="My Orders">
-    <div class="tabs-striped  tabs-top tabs-background-balanced tabs-color-light">
+    <div class="tabs-striped tabs-background-balanced tabs-color-light">
         <div class="tabs">
             <a class="tab-item" ng-click="tabvalue = 1;" ng-class="{'active': tabvalue == 1}">
         My Purchase
