--- a/www/templates/selling.html
+++ b/www/templates/selling.html
@@ -24,8 +24,8 @@
                                 <p>Amount: {{r.amount}}</p>
                                 <p ng-if="r.reason">Reason: {{r.reason}}</p>
                                 <textarea style="width:100%;font-size:13px;border: 1px solid #ccc;margin: 10px 0;padding: 4px;" ng-model="reason" rows="3" placeholder="Enter your reason"></textarea>
-                                <button class="button button-small button-outline button-balanced" ng-click="accept(r,reason);">Accept</button>
-                                <button class="button button-small button-outline button-assertive" ng-click="decline(r,reason);">Decline</button>
+                                <button class="button button-small button-outline button-balanced" ng-click="accept(r,reason);" ng-hide="hideAccept">Accept</button>
+                                <button class="button button-small button-outline button-assertive" ng-click="decline(r,reason);" ng-hide="hideAccept">Decline</button>
                             </div>
                         </div>
                     </div>
