--- a/www/templates/addproducts.html
+++ b/www/templates/addproducts.html
@@ -1,45 +1,45 @@
 <ion-modal-view view-title="Add Balance">
-    <ion-header-bar class="bar-balanced">
-        <h1 class="title">Add Product</h1>
-        <div class="buttons">
-            <button class="button button-clear" ng-click="closeModal()">Close</button>
-        </div>
-    </ion-header-bar>
-    <ion-content class="padding">
-        <div class="incard">
-            <form ng-submit="">
-                <div class="list">
-                    <div class="profile-img"> 
-                        <img ng-src={{prodimg|serverimage}} ng-click="addproductimage();">
-<!--                        <div class="holder">Add Image</div>-->
-                                      <div class="padding-horizontal text-center">
-                    <button class="button button-balanced pr-button">Add Image</button>
-                </div>
-                    </div>
-                    <div class="item item-input text-capitalize">
-                        <input type="text" placeholder="Name" ng-model="ap.name" ng-class="allvalidation[0].validation" required>
-                    </div>
-                    <div class="item  item-input text-capitalize">
-                        <input type="text" placeholder="Price" ng-model="ap.price" ng-class="allvalidation[1].validation" required>
-                    </div>
-                    <div class="item  item-input text-capitalize">
-                        <input type="number" min="1" placeholder="Quantity" ng-model="ap.quantity" ng-class="allvalidation[2].validation" required>
-                    </div>
-<!--
+   <ion-header-bar class="bar-balanced">
+      <h1 class="title">Add Product</h1>
+      <div class="buttons">
+         <button class="button button-clear" ng-click="closeModal()">Close</button>
+      </div>
+   </ion-header-bar>
+   <ion-content class="padding">
+      <div class="incard">
+         <form ng-submit="">
+            <div class="list">
+               <div class="profile-img">
+                  <img ng-src={{prodimg|serverimage}}>
+                  <!--                        <div class="holder">Add Image</div>-->
+                  <div class="padding-horizontal text-center">
+                     <button class="button button-balanced pr-button ion-plus-round" ng-click="addproductimage();"></button>
+                  </div>
+               </div>
+               <div class="item item-input">
+                  <input type="text" placeholder="Name" ng-model="ap.name" ng-class="allvalidation[0].validation" required>
+               </div>
+               <div class="item  item-input">
+                  <input type="tel" placeholder="Price" ng-model="ap.price" ng-class="allvalidation[1].validation" required>
+               </div>
+               <div class="item  item-input">
+                  <input type="tel" min="1" placeholder="Quantity" ng-model="ap.quantity" ng-class="allvalidation[2].validation" required>
+               </div>
+               <!--
                     <div class="item  item-input text-capitalize">
                         <input type="text" placeholder="SKU" ng-model="ap.sku">
                     </div>
 -->
-                     <label class="item item-input item-select area">
-                <div class="input-label">
-                    Category
-                </div>
-                <select ng-model="ap.category" ng-class="allvalidation[3].validation" required>
-                    <option value="">All</option>
-                    <option ng-repeat="c in cat" value="{{c.id}}">{{c.name}}</option>
-                </select>
-            </label>
-<!--
+               <label class="item item-input item-select area">
+                  <div class="input-label">
+                     Category
+                  </div>
+                  <select ng-model="ap.category" ng-class="allvalidation[3].validation" required>
+                     <option value="">All</option>
+                     <option ng-repeat="c in cat" value="{{c.id}}">{{c.name}}</option>
+                  </select>
+               </label>
+               <!--
                    <label class="item item-input item-select area">
                         <div class="input-label">
                             <span style="font-weight:bold;">Category</span>
@@ -50,23 +50,23 @@
                         </select>
                     </label>
 -->
-                    <div class="item item-toggle">
-                        Status
-                        <label class="toggle toggle-balanced">
-                            <input type="checkbox" ng-model="ap.status">
-                            <div class="track">
-                                <div class="handle"></div>
-                            </div>
-                        </label>
-                    </div>
-                    <div class="item  item-input text-capitalize">
-                        <textarea placeholder="Description" ng-model="ap.description" ng-class="allvalidation[4].validation" required></textarea>
-                    </div>
-                    <div class="padding text-center">
-                <button class="button pr-button button-balanced" ng-click="insertproduct(ap);">Save</button>
+               <div class="item item-toggle">
+                  Status
+                  <label class="toggle toggle-balanced">
+                     <input type="checkbox" ng-model="ap.status">
+                     <div class="track">
+                        <div class="handle"></div>
+                     </div>
+                  </label>
+               </div>
+               <div class="item  item-input">
+                  <textarea placeholder="Description" ng-model="ap.description" ng-class="allvalidation[4].validation" required></textarea>
+               </div>
+               <div class="padding text-center">
+                  <button class="button pr-button button-balanced" ng-click="insertproduct(ap);">Save</button>
+               </div>
             </div>
-                </div>
-            </form>
-        </div>
-    </ion-content>
+         </form>
+      </div>
+   </ion-content>
 </ion-modal-view>
