--- a/www/templates/checkout.html
+++ b/www/templates/checkout.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="item item-input text-capitalize">
                     <span class="input-label">Quantity*</span>
-                    <input class="text-right" type="text" placeholder="Quantity" ng-model="form.quantity" ng-class="allvalidation[8].validation" required>
+                    <input class="text-right" type="tel" placeholder="Quantity" ng-model="form.quantity" ng-class="allvalidation[8].validation" required>
 <!--
                     <span>Quantity*</span>
                       <input type="number" name="quantity" min="1" class="text-right" placeholder="Quantity" ng-model="form.quantity" ng-class="allvalidation[8].validation" required>
@@ -66,7 +66,7 @@
                         Continue
                     </button>
                 </div>
-               
+
             </div>
              <div class="padding">
                 <button class="button button-block button-royal" ng-click="buyproduct(form);">
