--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -18,6 +18,7 @@
             <div class="profile-img" ng-controller="ProfileCtrl">
                 <img ng-src="{{profile.shoplogo|serverimage}}">
                 <h3>{{profile.shopname}}</h3>
+                <h3>Membership Id : {{profile.membershipno}}</h3>
             </div>
 
 
