--- a/www/templates/purchase.html
+++ b/www/templates/purchase.html
@@ -20,6 +20,10 @@
                         <input type="number" placeholder="Amount" maxlength="10" ng-model="send.amount" ng-class="allvalidation[0].validation" required>
                     </label>
                     <label class="item item-input">
+                        <span class="input-label">Re-Enter Amount:</span>
+                        <input type="number" placeholder="Amount" maxlength="10" ng-model="send.reamount" ng-class="allvalidation[1].validation" required>
+                    </label>
+                    <label class="item item-input">
                         <span class="input-label">Reason:</span>
                         <input type="text" placeholder="Reason" ng-model="send.reason">
                     </label>
