--- a/www/templates/shop.html
+++ b/www/templates/shop.html
@@ -13,6 +13,12 @@
                         {{profile.salesbalance}}
                     </div>
                 </ion-item>
+                <ion-item class="product">
+                    <h2>Membership Id</h2>
+                    <div class="pull-right balanced amount">
+                        {{profile.membershipno}}
+                    </div>
+                </ion-item>
             </ion-list>
             <ion-item class="item-left">
                 <h2>Area</h2>
