--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -51,11 +51,11 @@
                     Add Balance
                 </button>
             </div>
-            <div class="padding-horizontal text-center p15" ng-controller="HomeCtrl">
+            <!-- <div class="padding-horizontal text-center p15" ng-controller="HomeCtrl">
                 <button class="button button-balanced pr-button" ng-click="openmodals();">
                 Terms
                 </button>
-            </div>
+            </div> -->
 
 
         </div>
