--- a/www/templates/terms.html
+++ b/www/templates/terms.html
@@ -673,9 +673,9 @@
 
   <div class="down text-center">
     <ion-list>
-      <ion-checkbox ng-model="filter.balanced">I Agree Terms & Conditions</ion-checkbox>
+      <ion-checkbox ng-model="accept.terms">I Agree Terms & Conditions</ion-checkbox>
     </ion-list>
-    <button class="button button-block button-balanced" ng-click="closemodal();">Continue</button>
+    <button class="button button-block button-balanced" ng-click="acceptTerms();">Continue</button>
   </div>
 
 </ion-modal-view>
