--- a/www/templates/faq.html
+++ b/www/templates/faq.html
@@ -42,8 +42,8 @@
                 
                 <div class="faq-cont">
                     <p>
-                        <b>How Does One Stop Barter(OSB) Work???</b>
-                        <br/>One Stop Barter performs two basic functions for their members. OSB act first as, keeping accounts of members' transactions and trade balances, and secondly actively stimulate trading by brokering Products &#38; services, either finding buyers/sellers for members product and services or buying it for their own account for later sale. OSB is a trade exchange which works on prepaid system.
+                        <b>How Does SWAAP(OSB) Work???</b>
+                        <br/>SWAAP performs two basic functions for their members. OSB act first as, keeping accounts of members' transactions and trade balances, and secondly actively stimulate trading by brokering Products &#38; services, either finding buyers/sellers for members product and services or buying it for their own account for later sale. OSB is a trade exchange which works on prepaid system.
                         <br>Every 1000 Cash Rupee paid to OSB towards transaction charges will give a excess of 10,000 Trade value for Sales and Purchases respectively.
                         <br>For Eg. A Retail shop owners who sell clothes once become a member has to pay 1000 Rupee Cash to OSB to get 10,000 trade value for his Purchase/sale So a Shop owner can now go to any OSB member and can purchase good UPTO 10,000 trade value of his needs and will have to sell his goods up to 10000 trade value as per other member needs . Any member looking for more trade can pay in advance for his transaction charges and increase his trade value as per his needs.
                     </p>
@@ -51,7 +51,7 @@
 
                 <div class="faq-cont">
                     <p>
-                        <b>What does it process to join ONE Stop Barter ??? </b>
+                        <b>What does it process to join SWAAP ??? </b>
                         <br/>Client has to pay Rs.15000/- as a lifetime membership fee to join OSB And then 5% transaction fee on each trade of purchase and sale.  
                     </p>
                 </div>
