--- a/www/templates/myproducts.html
+++ b/www/templates/myproducts.html
@@ -16,7 +16,8 @@
                     <h3 class="leftname" ng-if="pro.status==1 && pro.moderated==1">Status: <span>Available</span></h3>
                     <h3 class="leftname" ng-if="pro.status==0 && pro.moderated==1">Status: <span>Disabled</span></h3>
                     <h3 class="leftname" ng-if="pro.moderated==0"><span style="color:red">Waiting for approval</span></h3>
-                    <!-- 
+                    <h3 class="leftname" ng-if="pro.moderated==2">Status: <span style="color:red">Rejected</span></h3>
+                    <!--
                 <a class="item item-thumbnail-left bod-bottom" href="#">
                     <img src="img/icon.png">
                     <h2 class="leftname">Name: <span>XperiaZ</span></h2>
