--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -52,8 +52,8 @@
                 </button>
             </div>
             <!-- <div class="padding-horizontal text-center p15" ng-controller="HomeCtrl">
-                <button class="button button-balanced pr-button" ng-click="openmodals();">
-                Terms
+                <button class="button button-balanced pr-button" ng-click="openWindow();">
+                Pay
                 </button>
             </div> -->
 
