--- a/www/templates/addbalance.html
+++ b/www/templates/addbalance.html
@@ -1,46 +1,48 @@
 <ion-modal-view view-title="Add Balance">
-    <ion-header-bar class="bar-royal">
-        <h1 class="title">Add Balance</h1>
-        <div class="buttons">
-            <button class="button button-clear" ng-click="closeModal()">Close</button>
-        </div>
-    </ion-header-bar>
-    <ion-content class="padding">
-        <div class="incard">
-            <form ng-submit="doLogin();">
-                <div class="list">
-                    <label class="item item-input">
-                        <span class="input-label">Amount in Barter:</span>
-                        <input type="text" placeholder="Amount in Barter" ng-model="add.amount" ng-change="changeamountinr(add.amount);" class="disable" disabled>
-                    </label>
-                    <label class="item item-input">
-                        <span class="input-label">Amount in INR*:</span>
-                        <input type="tel" placeholder="Amount in INR" ng-model="add.amountinr" ng-change="changeamount(add.amountinr);" class="disable" ng-class="allvalidation[0].validation" required>
-                        <!-- <span>{{add.amount*percent/100|number:2}}   </span>    -->
-                    </label>
-
-                    <label class="item item-input">
-                        <span class="input-label">Reason:</span>
-                        <input type="text" placeholder="Reason" ng-model="add.reason" class="disable">
-                    </label>
-                    <div class="row pad">
-                        <div class="col">
-                           <p class="addb-p"> Purchase Value</p> 
-                        </div>
-                        <div class="col">
-                           <p class="addb-p">Sell Value</p> 
-                        </div>
-                    </div>
-                    <div class="row ">
-                        <div class="col-50">
-                            <div class="space"> <input type="text" placeholder="Purchase Value" ng-model="add.amount" class="disable" disabled></div>
-                        </div>
-                        <div class="col-50">
-                            <div class="space"> <input type="text" placeholder="Sell Value" ng-model="add.amount" class="disable" disabled></div>
-                        </div>
-                    </div>
-
-                    <!--
+   <ion-header-bar class="bar-royal">
+      <h1 class="title">Add Balance</h1>
+      <div class="buttons">
+         <button class="button button-clear" ng-click="closeModal()">Close</button>
+      </div>
+   </ion-header-bar>
+   <ion-content class="padding">
+      <div class="incard">
+         <form ng-submit="doLogin();">
+            <div class="list">
+               <label class="item item-input">
+                  <span class="input-label">Amount in Barter:</span>
+                  <input type="text" placeholder="Amount in Barter" ng-model="add.amount" ng-change="changeamountinr(add.amount);" class="disable" disabled>
+               </label>
+               <label class="item item-input">
+                  <span class="input-label">Amount in INR*:</span>
+                  <input type="tel" placeholder="Amount in INR" ng-model="add.amountinr" ng-change="changeamount(add.amountinr);" class="disable" ng-class="allvalidation[0].validation" required>
+                  <!-- <span>{{add.amount*percent/100|number:2}}   </span>    -->
+               </label>
+               <label class="item item-input">
+                  <span class="input-label">Reason:</span>
+                  <input type="text" placeholder="Reason" ng-model="add.reason" class="disable">
+               </label>
+               <div class="row pad">
+                  <div class="col">
+                     <p class="addb-p"> Purchase Value</p>
+                  </div>
+                  <div class="col">
+                     <p class="addb-p">Sell Value</p>
+                  </div>
+               </div>
+               <div class="row ">
+                  <div class="col-50">
+                     <div class="space">
+                        <input type="text" placeholder="Purchase Value" ng-model="add.amount" class="disable" disabled>
+                     </div>
+                  </div>
+                  <div class="col-50">
+                     <div class="space">
+                        <input type="text" placeholder="Sell Value" ng-model="add.amount" class="disable" disabled>
+                     </div>
+                  </div>
+               </div>
+               <!--
                      <label class="item item-input">
                         <span class="input-label">Purchase Value</span>
                         <input type="text" ng-model="add.amount" class="disable"  disabled>
@@ -50,22 +52,250 @@
                         <input type="text" ng-model="add.amount" class="disable" disabled>
                     </label>
 -->
-                    <div class="padding-horizontal text-center p15">
-                        <button class="button pr-button button-balanced" type="submit" ng-click="addbalance(add.amount,add.reason);" ng-show="showAddBtn">Add Balance</button>
-                        <!--                        <button class="button button-block button-balanced" type="submit" ng-click="topayment()">Add Balance</button>-->
-                    </div>
+               <div class="padding-horizontal text-center p15">
+                  <button class="button pr-button button-balanced" type="submit" ng-click="addbalance(add.amount,add.reason);" ng-show="showAddBtn">Add Balance</button>
+                  <!--                        <button class="button button-block button-balanced" type="submit" ng-click="topayment()">Add Balance</button>-->
+               </div>
+               <!--     Payment button               -->
+               <!--                    <div class="pm-button"><a href="https://www.payumoney.com/paybypayumoney/#/1C83343220BD901D4F4102601A363341"><img src="https://www.payumoney.com//media/images/payby_payumoney/buttons/111.png" /></a></div>-->
+            </div>
+         </form>
+      </div>
+      <form method="post" action="http://192.168.0.127/paymentgateway/ebs/submit.php" name="frmTransaction" id="frmTransaction" onSubmit="return validate()" target="_blank" style="display:none">
+         <h3>Action URL : https://secure.ebs.in/pg/ma/payment/request</h3>
+         <table width="100%" cellpadding="2" cellspacing="2" border="0">
+            <tr>
+               <th colspan="2">Transaction Details</th>
+            </tr>
+            <tr>
+               <td class="fieldName"><span class="error">*</span> Channel</td>
+               <td align="left">
+                  <select name="channel">
+                     <option value="0">Standard</option>
+                  </select>
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName" width="50%"><span class="error">*</span> Account Id</td>
+               <td align="left" width="50%">
+                  <input name="account_id" type="text" value="19042" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName" width="50%"><span class="error">*</span> Reference No</td>
+               <td align="left" width="50%">
+                  <input name="reference_no" type="text" ng-model="addBalanceObj.orderid" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName" width="50%"><span class="error">*</span> Sale Amount</td>
+               <td align="left" width="50%">
+                  <input name="amount" type="text" ng-model="addBalanceObj.amount" />
+                  <select name="currency">
+                     <option value="INR">INR</option>
+                  </select>
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName">Additional Currency</td>
+               <td align="left">
+                  <select name="display_currency">
+                     <option value="INR">INR</option>
+                     <option value="USD" selected>USD</option>
+                     <option value="EUR" selected>EURO</option>
+                     <option value="GBP" selected>GBP</option>
+                  </select>
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName" width="50%">Additional Currency Rate</td>
+               <td align="left" width="50%">
+                  <input name="display_currency_rates" type="text" value="" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName" width="50%"><span class="error">*</span> Description</td>
+               <td align="left" width="50%">
+                  <input name="description" type="text" value="SWAAP Add Balance" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName"><span class="error">*</span> Return Url</td>
 
-
-                    <!--     Payment button               -->
-                    <!--                    <div class="pm-button"><a href="https://www.payumoney.com/paybypayumoney/#/1C83343220BD901D4F4102601A363341"><img src="https://www.payumoney.com//media/images/payby_payumoney/buttons/111.png" /></a></div>-->
-
-
-
-                </div>
-
-            </form>
-
-
-        </div>
-    </ion-content>
+               <td align="left">
+                  <input name="return_url" type="text" size="60" value="http://192.168.0.127/osb/index.php/json/responseCheck" /> </td>
+            </tr>
+            <tr>
+               <td class="fieldName"><span class="error">*</span> Mode</td>
+               <td align="left">
+                  <select name="mode" ng-model="addBalanceObj.mode">
+                     <option value="TEST">TEST</option>
+                     <option value="LIVE">LIVE</option>
+                  </select>
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName">Payment Mode</td>
+               <td align="left">
+                  <select name="payment_mode">
+                     <option value="">All</option>
+                     <option value="1">Credit Card</option>
+                     <option value="2">Debit Card</option>
+                     <option value="3">Net Banking</option>
+                     <option value="4">Cash Card</option>
+                     <option value="5">Credit Card - EMI</option>
+                     <option value="6">Credit Card - Reward Point</option>
+                     <option value="7">Paypal</option>
+                  </select>
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName">Card Brand</td>
+               <td align="left">
+                  <select name="card_brand">
+                     <option value="">All</option>
+                     <option value="1">VISA</option>
+                     <option value="2">MasterCard</option>
+                     <option value="3">Maestro</option>
+                     <option value="4">Diners Club</option>
+                     <option value="5">American Express</option>
+                     <option value="6">JCB</option>
+                  </select>
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName">Payment Option</td>
+               <td align="left">
+                  <input name="payment_option" type="text" value="" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName">Bank Code</td>
+               <td align="left">
+                  <input name="bank_code" type="text" value="" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName">EMI</td>
+               <td align="left">
+                  <input name="emi" type="text" value="" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName">Page ID</td>
+               <td align="left">
+                  <input name="page_id" type="text" value="" />
+               </td>
+            </tr>
+            <tr>
+               <th colspan="2">Billing Address</th>
+            </tr>
+            <tr>
+               <td class="fieldName"><span class="error">*</span> Name</td>
+               <td align="left">
+                  <input name="name" type="text" ng-model="addBalanceObj.shopname" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName"><span class="error">*</span>Address</td>
+               <td align="left">
+                  <textarea name="address" ng-model="addBalanceObj.billingaddress"></textarea>
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName"><span class="error">*</span>City</td>
+               <td align="left">
+                  <input name="city" type="text" ng-model="addBalanceObj.billingcity" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName">State/Province</td>
+               <td align="left">
+                  <input name="state" type="text" ng-model="addBalanceObj.billingstate" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName"><span class="error">*</span>ZIP/Postal Code</td>
+               <td align="left">
+                  <input name="postal_code" type="text" ng-model="addBalanceObj.billingpincode" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName"><span class="error">*</span>Country</td>
+               <td align="left">
+                  <input name="country" type="text" value="IND" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName"><span class="error">*</span>Email</td>
+               <td align="left">
+                  <input name="email" type="text" ng-model="addBalanceObj.shopemail" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName">Telephone</td>
+               <td align="left">
+                  <input name="phone" type="text" ng-model="addBalanceObj.shopcontact1" />
+               </td>
+            </tr>
+            <tr>
+               <th colspan="2">Delivery Address</th>
+            </tr>
+            <tr>
+               <td class="fieldName"> Name</td>
+               <td align="left">
+                  <input name="ship_name" type="text" value="" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName">Address</td>
+               <td align="left">
+                  <input name="ship_address" type="text" value="" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName">City</td>
+               <td align="left">
+                  <input name="ship_city" type="text" value="" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName">State/Province</td>
+               <td align="left">
+                  <input name="ship_state" type="text" value="" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName">ZIP/Postal Code</td>
+               <td align="left">
+                  <input name="ship_postal_code" type="text" ng-model="addBalanceObj.barterAmt" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName">Country</td>
+               <td align="left">
+                  <input name="ship_country" type="text" value="" />
+               </td>
+            </tr>
+            <tr>
+               <td class="fieldName">Telephone</td>
+               <td align="left">
+                  <input name="ship_phone" type="text" value="" />
+               </td>
+            </tr>
+            <tr>
+               <td valign="top" align="center" colspan="2">
+                  <input name="submitted" value="Submit" type="submit" />&nbsp;
+                  <input value="Reset" type="reset" />
+               </td>
+            </tr>
+            <tr>
+               <td valign="top" align="center" colspan="2">
+                  <span class="error">*</span>
+                  <span>denotes required field</span>
+               </td>
+            </tr>
+         </table>
+      </form>
+   </ion-content>
 </ion-modal-view>
