--- a/www/templates/addbalance.html
+++ b/www/templates/addbalance.html
@@ -53,7 +53,11 @@
                     </label>
 -->
                <div class="padding-horizontal text-center p15">
-                  <button class="button pr-button button-balanced" type="submit" ng-click="addbalance(add.amount,add.reason);" ng-show="showAddBtn">Add Balance</button>
+                  <button class="button pr-button button-balanced" type="submit" ng-click="addbalance(add.amount,add.reason);" ng-show="showAddBtn">Pay Now
+                  </button>
+
+                  <button class="button pr-button button-balanced" type="submit" ng-click="addbalanceRequest(add.amount,add.reason);" ng-show="showAddBtn">Request to Admin
+                  </button>
                   <!--                        <button class="button button-block button-balanced" type="submit" ng-click="topayment()">Add Balance</button>-->
                </div>
                <!--     Payment button               -->
