--- a/www/templates/profile-edit.html
+++ b/www/templates/profile-edit.html
@@ -14,7 +14,6 @@
                   <div class="item item-input text-capitalize">
                      <input type="text" placeholder="Name" ng-model="profile.shopname">
                   </div>
-
                   <!--Select-->
                   <div class="item item-input item-select text-capitalize">
                      <div class="input-label different">Area</div>
@@ -31,9 +30,17 @@
                      </select>
                   </div>
                   <!--Select-->
-
                   <div class="item item-input text-capitalize">
                      <textarea placeholder="Address" ng-model="profile.billingaddress"></textarea>
+                  </div>
+                  <div class="item item-input">
+                     <input type="text" placeholder="City" ng-model="profile.billingcity">
+                  </div>
+                  <div class="item item-input">
+                     <input type="text" placeholder="State" ng-model="profile.billingstate">
+                  </div>
+                  <div class="item item-input">
+                     <input type="text" placeholder="Pincode" ng-model="profile.billingpincode">
                   </div>
                   <div class="item text-capitalize">
                      <textarea placeholder="Description" ng-model="profile.description"></textarea>
@@ -44,7 +51,6 @@
                   <div class="item item-input">
                      <input type="tel" maxlength="10" placeholder="Landline No." ng-model="profile.shopcontact2">
                   </div>
-
                   <div class="item item-input">
                      <input type="email" placeholder="Email Id" ng-model="profile.shopemail">
                   </div>
@@ -52,13 +58,10 @@
                      <input type="text" placeholder="Website" ng-model="profile.website">
                   </div>
                   <div class="m20">
-
                      <div class="item item-input item-text-wrap header">
                         <h2>Shops Photos</h2>
                      </div>
                      <div class="row">
-
-
                         <div class="col input-div" ng-repeat="i in pic" ng-click="changeshopimage(i.id);">
                            <!--
                                 <div class="img-profile">
@@ -67,41 +70,33 @@
 
 -->
                            <div class="image-hold" ng-style="{'background-image':'url({{i.photo|serverimage}})'}">
-
                            </div>
                         </div>
-
                         <div class="col-33 input-div" ng-if="pic.length==0" ng-click="changeshopimage('');">
                            <div class="img-profile">
                               <img src="img/add.png">
                               <div class="holder2">Edit</div>
                            </div>
                         </div>
-
                         <div class="col-33 input-div" ng-if="pic.length==0 || pic.length==1" ng-click="changeshopimage('');">
                            <div class="img-profile">
                               <img src="img/add.png">
                               <div class="holder2">Edit</div>
                            </div>
                         </div>
-
-
                         <div class="col-33 input-div" ng-if="pic.length==0 || pic.length==1 ||  pic.length==2" ng-click="changeshopimage('');">
                            <div class="img-profile">
                               <img src="img/add.png">
                               <div class="holder2">Edit</div>
                            </div>
                         </div>
-
                      </div>
                   </div>
                   <div class="m20">
-
                      <div class="item item-input item-text-wrap header">
                         <h2>Products Photos</h2>
                      </div>
                      <div class="row">
-
                         <div class="col input-div" ng-repeat="i in image" ng-click="changeproductimage(i.id);">
                            <!--
                                 <div class="img-profile">
@@ -109,10 +104,8 @@
                                 </div>
 -->
                            <div class="image-hold" ng-style="{'background-image':'url({{i.photo|serverimage}})'}">
-
                            </div>
                         </div>
-
                         <div class="col input-div" ng-if="image.length==0" ng-click="changeproductimage('');">
                            <div class="img-profile">
                               <img src="img/add.png">
@@ -131,7 +124,6 @@
                               <div class="holder2">Edit</div>
                            </div>
                         </div>
-
                      </div>
                   </div>
                   <div class="padding-horizontal btn-rest text-center p20 p15">
@@ -139,10 +131,7 @@
                   </div>
                </div>
             </form>
-
          </div>
-
       </ion-list>
-
    </ion-content>
 </ion-view>
