--- a/www/templates/addbalance.html
+++ b/www/templates/addbalance.html
@@ -53,10 +53,10 @@
                     </label>
 -->
                <div class="padding-horizontal text-center p15">
-                  <button class="button pr-button button-balanced" type="submit" ng-click="addbalance(add.amount,add.reason);" ng-show="showAddBtn">Pay Now
+                  <button class="button pr-button button-balanced" type="submit" ng-click="addbalance(add.amount,add.reason);" ng-show="showAddBtn" style="width:134px">Pay Now
                   </button>
 
-                  <button class="button pr-button button-balanced" type="submit" ng-click="addbalanceRequest(add.amount,add.reason);" ng-show="showAddBtn">Request to Admin
+                  <button class="button pr-button button-balanced" type="submit" ng-click="addbalanceRequest(add.amount,add.reason);" ng-show="showAddBtn" style="font-size:12px;width:134px">Request to Admin
                   </button>
                   <!--                        <button class="button button-block button-balanced" type="submit" ng-click="topayment()">Add Balance</button>-->
                </div>
