--- a/www/templates/profile-edit.html
+++ b/www/templates/profile-edit.html
@@ -40,7 +40,7 @@
                      <input type="text" placeholder="State" ng-model="profile.billingstate">
                   </div>
                   <div class="item item-input">
-                     <input type="text" placeholder="Pincode" ng-model="profile.billingpincode">
+                     <input type="tel" maxlength="6" placeholder="Pincode" ng-model="profile.billingpincode">
                   </div>
                   <div class="item text-capitalize">
                      <textarea placeholder="Description" ng-model="profile.description"></textarea>
