--- a/www/templates/faq.html
+++ b/www/templates/faq.html
@@ -1,7 +1,7 @@
 <ion-view view-title="FAQ's">
     <ion-content class="padding">
         <div class="incard">
-            <div class="padding"> 
+            <div class="padding">
                 <div class="faq-cont">
                     <p>
                         <b>What is Barter ??? </b>
@@ -9,7 +9,7 @@
 
                     </p>
                 </div>
-                
+
                 <div class="faq-cont">
                     <p>
                         <b>What is Barter Trade ???</b>
@@ -24,14 +24,14 @@
                         <br/>A Barter trade puts idle resources to work such as excess time, inventory, and capacity which are converted into profits.
                     </p>
                 </div>
-                
+
                 <div class="faq-cont">
                     <p>
                         <b>How is Trade value Define???</b>
                         <br/>A printed cost of product or sevices is define as trade value.
                     </p>
                 </div>
-                
+
                 <div class="faq-cont">
                     <p>
                         <b> Why do organization join a barter Trade Network???</b>
@@ -39,20 +39,20 @@
                         <br/>Trade due are credited/ debited to a trade account of the respective parties, which can then be spent on any item or service desired from within the network from time to time. 
                     </p>
                 </div>
-                
+
                 <div class="faq-cont">
                     <p>
-                        <b>How Does SWAAP(OSB) Work???</b>
-                        <br/>SWAAP performs two basic functions for their members. OSB act first as, keeping accounts of members' transactions and trade balances, and secondly actively stimulate trading by brokering Products &#38; services, either finding buyers/sellers for members product and services or buying it for their own account for later sale. OSB is a trade exchange which works on prepaid system.
-                        <br>Every 1000 Cash Rupee paid to OSB towards transaction charges will give a excess of 10,000 Trade value for Sales and Purchases respectively.
-                        <br>For Eg. A Retail shop owners who sell clothes once become a member has to pay 1000 Rupee Cash to OSB to get 10,000 trade value for his Purchase/sale So a Shop owner can now go to any OSB member and can purchase good UPTO 10,000 trade value of his needs and will have to sell his goods up to 10000 trade value as per other member needs . Any member looking for more trade can pay in advance for his transaction charges and increase his trade value as per his needs.
+                        <b>How Does SWAAP Work???</b>
+                        <br/>SWAAP performs two basic functions for their members. SWAAP act first as, keeping accounts of members' transactions and trade balances, and secondly actively stimulate trading by brokering Products &#38; services, either finding buyers/sellers for members product and services or buying it for their own account for later sale. SWAAP is a trade exchange which works on prepaid system.
+                        <br>Every 1000 Cash Rupee paid to SWAAP towards transaction charges will give a excess of 10,000 Trade value for Sales and Purchases respectively.
+                        <br>For Eg. A Retail shop owners who sell clothes once become a member has to pay 1000 Rupee Cash to SWAAP to get 10,000 trade value for his Purchase/sale So a Shop owner can now go to any SWAAP member and can purchase good UPTO 10,000 trade value of his needs and will have to sell his goods up to 10000 trade value as per other member needs . Any member looking for more trade can pay in advance for his transaction charges and increase his trade value as per his needs.
                     </p>
                 </div>
 
                 <div class="faq-cont">
                     <p>
                         <b>What does it process to join SWAAP ??? </b>
-                        <br/>Client has to pay Rs.15000/- as a lifetime membership fee to join OSB And then 5% transaction fee on each trade of purchase and sale.  
+                        <br/>Client has to pay Rs.15000/- as a lifetime membership fee to join SWAAP And then 5% transaction fee on each trade of purchase and sale.  
                     </p>
                 </div>
 
@@ -62,7 +62,7 @@
                         <br/>There are no tax advantages or disadvantages to barter. The Internal Revenue Service considers barter income as the same as cash income for tax purposes. Trading should be considered a marketing tool, not a tax tool.
                     </p>
                 </div>
-                
+
             </div>
         </div>
     </ion-content>
