--- a/www/templates/events.html
+++ b/www/templates/events.html
@@ -1,24 +1,14 @@
 <ion-view view-title="Events">
     <ion-content class="padding">
-        <div class="incard notification">
+        <!-- <div class="incard notification">
             <div class="header-cards">Business
                 <span style="float:right; font-size:14px;">15-12-2014</span>
             </div>
 
-            <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-        </div>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        </div> -->
         <div class="incard notification">
-            <div class="header-cards">Business
-                <span style="float:right; font-size:14px;">15-12-2014</span>
-            </div>
-            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-        </div>
-        <div class="incard notification">
-            <div class="header-cards">Business
-                <span style="float:right; font-size:14px;">15-12-2014</span>
-            </div>
-            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+          <div class="header-cards">Coming Soon</div>
         </div>
     </ion-content>
 </ion-view>
